# Auto-alpha

./: .env.example  .gitignore  AGENTS.md  CATREADME.md  FRAMEWORK_UPDATE.md  README.md  environment.yml  pyproject.toml  requirements-optional.txt  requirements.txt  times.py  备忘录.md
alpha_experiment_store/: __init__.py  comparison.py  consolidate.py  ingest.py  leaderboard.py  models.py  registry.py  report.py  run_store.py
alpha_factory/: __init__.py  campaign.py  diversity.py  generators.py  models.py  novelty.py  proxy_eval.py  report.py  run_factory.py  runner.py  scoring.py  static_checks.py  templates.py
approval/: __init__.py  models.py  run_approval.py  store.py
artifact_schema/: __init__.py  manifest.py  models.py  registry.py  report.py  run_validate.py  scanner.py  validator.py  writer.py
backfill_observer/: __init__.py  eta.py  loader.py  models.py  postprocess.py  progress.py  repair.py  report.py  run_observer.py
backfill_repair/: __init__.py  models.py  planner.py  report.py  run_repair.py  runner.py
backtest/: __init__.py  cost.py  io.py  models.py  portfolio.py  rules.py  run_backtest.py  simulator.py  time_contract.py
broker_adapter/: __init__.py  converters.py  file_adapter.py  models.py  protocol.py  reconciliation.py  report.py  run_broker.py  simulated.py  state_machine.py  store.py
broker_connectivity/: __init__.py  credentials.py  models.py  network_guard.py  probe.py  profiles.py  readonly_client.py  report.py  run_connectivity.py  session_store.py
broker_file_gateway/: __init__.py  inbox.py  mapping.py  models.py  packager.py  profiles.py  report.py  roundtrip.py  run_gateway.py  state.py
broker_mapping_certification/: __init__.py  certifier.py  fixtures.py  models.py  policy.py  report.py  run_mapping_certify.py
broker_readonly_mirror/: __init__.py  mirror_store.py  models.py  normalizer.py  reconciliation.py  report.py  run_readonly_mirror.py
broker_statement/: __init__.py  importer.py  mapping.py  models.py  report.py  run_statement.py  schema.py  synthesizer.py  validator.py
broker_uat_lab/: __init__.py  contract.py  mock_broker.py  models.py  replay.py  report.py  run_uat.py  scenarios.py
capacity_model/: __init__.py  estimator.py  impact.py  models.py  report.py  run_capacity.py
certification_campaign_store/: __init__.py  consolidate.py  ingest.py  leaderboard.py  models.py  registry.py  report.py  run_certification_campaign.py  scheduler.py
ci/: __init__.py  commands.py  post_download_negative_smoke.py  run_local_ci.py
compute_cluster/: __init__.py  gpu_probe.py  heartbeat.py  job_store.py  lease.py  models.py  report.py  resources.py  run_compute.py  runner.py  scheduler.py
corporate_actions/: __init__.py  accounting.py  models.py  normalizer.py  reconciliation.py  report.py  run_actions.py  schedule.py  total_return.py
cross_source_checks/: __init__.py  comparator.py  models.py  report.py  run_compare.py
dashboard/: app.py  config.py  data_service.py  visualizer.py
data_backfill/: __init__.py  chunking.py  coverage.py  executor.py  models.py  planner.py  quota.py  report.py  run_backfill.py  staging.py
data_lake/: __init__.py  fingerprint.py  freeze.py  lineage.py  models.py  registry.py  report.py  retention.py  run_lake.py  task052_freeze.py  validator.py
data_pipeline/: __init__.py  config.py  data_manager.py  db_manager.py  fetcher.py  processor.py  run_pipeline.py
data_quality_lab/: __init__.py  checks_core.py  checks_cross_dataset.py  checks_event.py  checks_financial.py  checks_index_industry.py  models.py  repair_suggestions.py  report.py  rule_registry.py  rules.py  run_quality_lab.py  scanner.py  scorecard.py
data_source_validation/: __init__.py  audit_summary.py  baseline_compare.py  contracts.py  fake_tushare.py  field_coverage.py  incremental_recovery.py  models.py  probe.py  report.py  run_smoke.py  smoke_runner.py
dev_tools/: __init__.py  task055kr_harness.py  task055kr_mutations.py
evaluation/: __init__.py  metrics.py  report.py  split.py
execution/: __init__.py  config.py  exporter.py  models.py  paper_broker.py
execution_plan/: __init__.py  models.py  report.py  run_plan.py  scheduler.py  simulator.py
experiment_orchestrator/: __init__.py  merge.py  models.py  planner.py  report.py  run_experiment.py  sharding.py  workflows.py
factor_certification/: __init__.py  decision.py  models.py  policy.py  report.py  run_certify.py  scorecard.py
factor_engine/: __init__.py  correlation.py  gate.py  pipeline.py  transforms.py
factor_lifecycle/: __init__.py  decision.py  health.py  models.py  policy.py  report.py  review.py  run_lifecycle.py
factor_store/: __init__.py  hash.py  models.py  normalized_overlay.py  storage.py
feature_factory/: __init__.py  builder.py  catalog.py  contracts.py  coverage.py  extended_builder.py  models.py  readiness.py  report.py  run_features.py  semantics.py  validity.py  vocab_adapter.py
feature_promotion/: __init__.py  decision.py  evidence.py  models.py  policy.py  report.py  review.py  run_promotion.py
formula_batch_eval/: __init__.py  evaluator.py  merge.py  models.py  run_batch_eval.py  sharding.py
formula_corpus/: __init__.py  builder.py  models.py  run_corpus.py
formula_search/: __init__.py  generator.py  models.py  mutation.py  report.py  run_search.py  search.py
go_live_gate/: __init__.py  decision.py  models.py  policy.py  report.py  run_go_live.py  scorecard.py
incident_response/: __init__.py  detectors.py  models.py  report.py  run_incident.py  runbook.py  store.py
leakage_audit/: __init__.py  backtest_audit.py  corporate_actions.py  factor_audit.py  models.py  report.py  run_audit.py  static_analysis.py  truncation.py
live_readiness/: __init__.py  decision.py  models.py  policy.py  report.py  run_readiness.py  scorecard.py
matrix_refresh/: __init__.py  diff.py  models.py  planner.py  refresh.py  report.py  run_matrix_refresh.py  validator.py
matrix_store/: __init__.py  builder.py  models.py  reader.py  run_build_matrix.py  strict_engineering.py  validator.py
model_core/: __init__.py  alphagpt.py  backtest.py  (+8 more)
(+695 files in other folders)
