[project]
name = "auto-alpha"
version = "0.1.0"
description = "A-share quantitative factor research platform."
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "plotly>=5.17.0",
    "streamlit>=1.28.0",
    "torch>=2.0.0",
    "tqdm>=4.66.0",
]

[project.optional-dependencies]
research = [
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "tushare>=1.2.89",
]

[dependency-groups]
dev = [
    "pytest>=9.0.0",
]

[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[tool.uv]
package = true

[tool.hatch.build.targets.wheel]
packages = [
    "approval",
    "artifact_schema",
    "backtest",
    "broker_adapter",
    "capacity_model",
    "corporate_actions",
    "ci",
    "cross_source_checks",
    "dashboard",
    "data_pipeline",
    "data_source_validation",
    "evaluation",
    "execution",
    "execution_plan",
    "factor_engine",
    "factor_store",
    "factor_lifecycle",
    "formula_search",
    "formula_corpus",
    "formula_batch_eval",
    "leakage_audit",
    "matrix_store",
    "model_core",
    "model_registry",
    "monitoring",
    "neural_search",
    "operations",
    "paper_account",
    "performance_benchmark",
    "point_in_time",
    "portfolio_optimizer",
    "release_manager",
    "research",
    "research_suite",
    "risk_model",
    "settlement_engine",
    "strategy_manager",
    "universe",
]

[tool.hatch.build.targets.sdist]
include = [
    "approval",
    "artifact_schema",
    "backtest",
    "broker_adapter",
    "capacity_model",
    "corporate_actions",
    "ci",
    "cross_source_checks",
    "dashboard",
    "data_pipeline",
    "data_source_validation",
    "evaluation",
    "execution",
    "execution_plan",
    "factor_engine",
    "factor_store",
    "factor_lifecycle",
    "formula_search",
    "formula_corpus",
    "formula_batch_eval",
    "leakage_audit",
    "matrix_store",
    "model_core",
    "model_registry",
    "monitoring",
    "neural_search",
    "operations",
    "paper_account",
    "performance_benchmark",
    "point_in_time",
    "portfolio_optimizer",
    "release_manager",
    "research",
    "research_suite",
    "risk_model",
    "settlement_engine",
    "strategy_manager",
    "universe",
    "README.md",
    "CATREADME.md",
    "FRAMEWORK_UPDATE.md",
    "pyproject.toml",
    "requirements.txt",
    "requirements-optional.txt",
    "environment.yml",
]
exclude = [
    "assets",
    "paper",
    "lord",
    "tests",
    "times.py",
]
