[project]
name = "auto-alpha"
version = "0.1.0"
description = "A-share quantitative factor research platform."
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "plotly>=5.17.0",
    "streamlit>=1.28.0",
    "torch>=2.0.0",
    "tqdm>=4.66.0",
]

[project.optional-dependencies]
research = [
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "tushare>=1.2.89",
]

[dependency-groups]
dev = [
    "pytest>=9.0.0",
]

[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[tool.uv]
package = true

[tool.hatch.build.targets.wheel]
packages = [
    "approval",
    "alpha_experiment_store",
    "alpha_factory",
    "artifact_schema",
    "backfill_repair",
    "backfill_observer",
    "backtest",
    "broker_adapter",
    "broker_connectivity",
    "broker_file_gateway",
    "broker_mapping_certification",
    "broker_statement",
    "broker_readonly_mirror",
    "broker_uat_lab",
    "capacity_model",
    "certification_campaign_store",
    "corporate_actions",
    "compute_cluster",
    "ci",
    "cross_source_checks",
    "dashboard",
    "data_backfill",
    "data_lake",
    "data_pipeline",
    "data_quality_lab",
    "data_source_validation",
    "evaluation",
    "execution",
    "execution_plan",
    "experiment_orchestrator",
    "factor_engine",
    "factor_store",
    "factor_certification",
    "factor_lifecycle",
    "feature_factory",
    "feature_promotion",
    "formula_search",
    "formula_corpus",
    "formula_batch_eval",
    "go_live_gate",
    "incident_response",
    "leakage_audit",
    "matrix_store",
    "matrix_refresh",
    "model_core",
    "model_registry",
    "monitoring",
    "neural_search",
    "operations",
    "operator_handoff",
    "paper_account",
    "performance_benchmark",
    "point_in_time",
    "portfolio_campaign_store",
    "portfolio_certification",
    "portfolio_lab",
    "portfolio_optimizer",
    "post_download_orchestrator",
    "program_trading_compliance",
    "production_orchestrator",
    "production_replay",
    "reconciliation_center",
    "raw_data_index",
    "raw_data_landing",
    "release_manager",
    "real_data_ops",
    "research",
    "research_firewall",
    "research_data_readiness",
    "research_suite",
    "risk_model",
    "risk_controls",
    "settlement_engine",
    "shadow_lab",
    "shadow_trading",
    "strategy_manager",
    "task_051_a",
    "task_052_a",
    "task_053_a",
    "task_054_a",
    "task_054_b",
    "universe",
    "validation_campaign_store",
    "live_readiness",
    "validation_lab",
]

[tool.hatch.build.targets.sdist]
include = [
    "approval",
    "alpha_experiment_store",
    "alpha_factory",
    "artifact_schema",
    "backfill_repair",
    "backfill_observer",
    "backtest",
    "broker_adapter",
    "broker_connectivity",
    "broker_file_gateway",
    "broker_mapping_certification",
    "broker_statement",
    "broker_readonly_mirror",
    "broker_uat_lab",
    "capacity_model",
    "certification_campaign_store",
    "corporate_actions",
    "compute_cluster",
    "ci",
    "cross_source_checks",
    "dashboard",
    "data_backfill",
    "data_lake",
    "data_pipeline",
    "data_quality_lab",
    "data_source_validation",
    "evaluation",
    "execution",
    "execution_plan",
    "experiment_orchestrator",
    "factor_engine",
    "factor_store",
    "factor_certification",
    "factor_lifecycle",
    "feature_factory",
    "feature_promotion",
    "formula_search",
    "formula_corpus",
    "formula_batch_eval",
    "go_live_gate",
    "incident_response",
    "leakage_audit",
    "matrix_store",
    "matrix_refresh",
    "model_core",
    "model_registry",
    "monitoring",
    "neural_search",
    "operations",
    "operator_handoff",
    "paper_account",
    "performance_benchmark",
    "point_in_time",
    "portfolio_campaign_store",
    "portfolio_certification",
    "portfolio_lab",
    "portfolio_optimizer",
    "post_download_orchestrator",
    "program_trading_compliance",
    "production_orchestrator",
    "production_replay",
    "reconciliation_center",
    "raw_data_index",
    "raw_data_landing",
    "release_manager",
    "real_data_ops",
    "research",
    "research_firewall",
    "research_data_readiness",
    "research_suite",
    "risk_model",
    "risk_controls",
    "settlement_engine",
    "shadow_lab",
    "shadow_trading",
    "strategy_manager",
    "task_051_a",
    "universe",
    "validation_campaign_store",
    "live_readiness",
    "validation_lab",
    "README.md",
    "CATREADME.md",
    "FRAMEWORK_UPDATE.md",
    "pyproject.toml",
    "requirements.txt",
    "requirements-optional.txt",
    "environment.yml",
]
exclude = [
    "assets",
    "paper",
    "lord",
    "tests",
    "times.py",
]
